Fix CPU spiking