@@ -17,9 +17,11 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.Phaser;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.Semaphore;
+import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -63,9 +65,20 @@ public class OpenSearchBulkSink implements BulkSink {
   private static final JacksonJsonpMapper JACKSON_JSONP_MAPPER =
       new JacksonJsonpMapper(OBJECT_MAPPER);
   private static final int MAX_CONCURRENT_DOC_BUILDS = 50;
-  private static final ExecutorService DOC_BUILD_EXECUTOR =
-      Executors.newFixedThreadPool(
-          MAX_CONCURRENT_DOC_BUILDS, Thread.ofVirtual().name("doc-build-", 0).factory());
+  private static final ExecutorService DOC_BUILD_EXECUTOR = createDocBuildExecutor();
+
+  private static ExecutorService createDocBuildExecutor() {
+    ThreadPoolExecutor pool =
+        new ThreadPoolExecutor(
+            MAX_CONCURRENT_DOC_BUILDS,
+            MAX_CONCURRENT_DOC_BUILDS,
+            60L,
+            TimeUnit.SECONDS,
+            new LinkedBlockingQueue<>(),
+            Thread.ofVirtual().name("doc-build-", 0).factory());
+    pool.allowCoreThreadTimeOut(true);
+    return pool;
+  }
 
   /** Callback interface for reporting sink statistics per entity type. */
   public interface SinkStatsCallback {
@@ -118,8 +131,16 @@ public class OpenSearchBulkSink implements BulkSink {
     this.searchClient = (OpenSearchClient) searchRepository.getSearchClient();
     this.batchSize = batchSize;
     this.maxConcurrentRequests = maxConcurrentRequests;
-    this.vectorExecutor =
-        Executors.newFixedThreadPool(MAX_VECTOR_THREADS, Thread.ofVirtual().factory());
+    ThreadPoolExecutor vectorPool =
+        new ThreadPoolExecutor(
+            MAX_VECTOR_THREADS,
+            MAX_VECTOR_THREADS,
+            60L,
+            TimeUnit.SECONDS,
+            new LinkedBlockingQueue<>(),
+            Thread.ofVirtual().name("vector-", 0).factory());
+    vectorPool.allowCoreThreadTimeOut(true);
+    this.vectorExecutor = vectorPool;
     this.phaser = new Phaser(1);
     this.pendingThreads = new CopyOnWriteArrayList<>();
 
